[metadata]
name = wfssrv
description = MMTO Wavefront Sensor Analysis Server
author = T. E. Pickering (MMT Observatory)
author_email = tim@mmto.org
license = BSD-3
url = https://github.com/MMTObservatory/WFSsrv
edit_on_github = True
github_project = MMTObservatory/WFSsrv

# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 1.0.dev

[options]
python_requires = >=3.7
zip_safe = False
use_2to3 = False
include_package_data = True
scripts = scripts/sao-wfs-server

[options.extras_require]

[options.entry_points]
console_scripts =
    wfs_header.py = wfssrv.scripts.wfs_header:main
    wfssrv = wfssrv.wfssrv:main

[options.package_data]
wfssrv.templates = *.html
wfssrv.static = */*
wfssrv.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py,_astropy_init.py,version.py
